Fixed basic navbar spacing and layout

--- a/css/global.css
+++ b/css/global.css
@@ -12,9 +12,8 @@ html, body{
 	font-family: 'Raleway', sans-serif;
 	background-color: #111111;
 	color: #cdcdcd;
-  max-width:80vw;
-  margin:0;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -44,6 +43,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* End CSS Reset */
+
+body {
+	/* max-width: 80vw;
+	margin: auto; */
+}
 
 h1 {
 	font-family: 'Lato', sans-serif;
@@ -61,24 +66,11 @@ h2 {
 	margin-bottom: 0.2em;
 }
 
-.navbar .navbar-brand {
-  text-align: center;
-  /* display: block; */
-  /* width: 100%; */
-}
-
-.navbar .navbar-brand > .navbar-item,
-.navbar .navbar-brand .navbar-link {
-  /* display: inline-block; */
-}
-
 a {
 	color: inherit;
 }
 
-a.navbar-item:hover {
-	color: #000000;
-}
+
 
 a:hover {
 	color: #c4c4c4;
